styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: var(--blue0);
}

:root {
    --blue0: #191a31;
    --blue1: #2d3250;
    --blue2: #424769;
    --blue3: #676f9d;
    --orange: #f9b17a;
}

.container {
    background-color: var(--blue0);
    height: 100vh;
    color: white;
    font-family: monospace;
}

.header {
    background-color: var(--blue0);
    height: 60px;
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 10px;
    justify-content: space-between;
}
.header .buttons {
    display: flex;
    gap: 10px;
}
.title {
    margin-left: auto;
    margin-right: 15px;
}

.btn, .testbtn, .findCoins, .processBtn{
    padding: 5px 10px;
    letter-spacing: 1px;
    background-color: var(--orange);
    border: solid black 1px;
    border-radius: 5px;
    transition: transform 0.3s ease;
}
.processBtn, .inputBtn{
    font-weight: bold;
}
.btn:hover{
    transform: scale(1.05);
}
.btn:disabled{
    transform: none;
    background-color: gray;
    color: white;
}

.content {
    display: flex;
    height: calc(100vh - 60px);
    flex-direction: row;
    margin: 0px 10px;
    margin-right: 15px;
}

.infoMenu {
    background-color: var(--blue0);
    width: 250px;
    padding: 10px;
    color:wheat;
    flex-shrink: 0.1;
}
#psconsole{
    overflow: scroll;
    overflow-x: hidden;
}

.mainPanel {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}

.displays {
    background-color: var(--blue0);
    flex-grow: 1;
    display: flex;
    margin-bottom: 8px;
}

.inputImageDiv {
    background-color: var(--blue2);
    flex: 1;
    margin-right: 10px;
    border-radius: 25px;
}

.outputImageDiv {
    background-color: var(--blue2);
    flex: 1;
    border-radius: 25px;
}

.bottomPanel {
    background-color: var(--blue1);
    height: 150px;
    border-radius: 25px;
    padding: 10px;
    margin-bottom: 10px;
}
#total, #counts {
    background-color: var(--blue1);
}

.outputImageDiv canvas {
    width: 100%;
    height: auto;
}

